--- a/vercel.json
+++ b/vercel.json
@@ -2,32 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "manage.py",
-        "use": "@vercel/python",
-        "config": {
-          "maxLambdaSize": "50mb",
-          "functions": {
-            "api/**/*.py": {
-              "memory": 1024,
-              "maxDuration": 10
-            }
-          }
-        }
+        "src": "delirium/wsgi.py",
+        "use": "@vercel/python"
       }
     ],
     "routes": [
       {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/media/(.*)",
-        "dest": "/media/$1"
-      },
-      {
         "src": "/(.*)",
-        "dest": "/manage.py"
+        "dest": "delirium/wsgi.py"
       }
     ]
   }
-  
