--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,31 @@
     "builds": [
       {
         "src": "delirium/wsgi.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": {
+          "maxLambdaSize": "50mb",
+          "functions": {
+            "api/**/*.py": {
+              "memory": 1024,
+              "maxDuration": 10
+            }
+          }
+        }
       }
     ],
     "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/media/(.*)",
+        "dest": "/media/$1"
+      },
       {
         "src": "/(.*)",
         "dest": "delirium/wsgi.py"
       }
     ]
   }
+  
